2000-12-09  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --utf8 for UTF8 encoding (in KDE2)

2000-12-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh:
	added environment variable to allow bringing up the network
	programmatically
	documentation in file

2000-11-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh:
	make distcheck2

2000-11-19  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	fixed 'make distcheck' by adding $(top_srcdir)/utils/ path

2000-11-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* rebuild_dev.sh:
	added script that reconfigures and rebuilds fvwm
	* configure_dev.sh:
	script that calls automake, autoconf and configure
	* build_dev.sh:
	script that rebuilds fvwm with -Wall and -Werror

2000-11-13  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	replaced unportable $<

2000-11-10  Mikhael Goikhman  <migo@homemail.com>

	* make_fvwmdist.sh:
	small fix in cvs log message, now also auto-updating the NEWS file

2000-11-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm24_convert.1:
	* fvwm24_convert.in: Convert GlobalOpts to Style commands or BugOpts
	as needed.

2000-10-11  Dan Espen  <dane@mk.telcordia.com>

	* fvwm24_convert.1:
	* fvwm24_convert.in: Convert to perl, print warning on read commands,
	do caseless matching on commands.

2000-10-09  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-directory.{in,1}:
	* fvwm-menu-headlines.{in,1}:
	added --command options, which enhance --exec ones;
	use ~/.fvwm ($FVWM_USERDIR) for state files/dirs, not $HOME

2000-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* xpmroot.c (SetRootWindow):
	honour return code of XGetWindowAttributes()

2000-10-04  Mikhael Goikhman  <migo@homemail.com>

	* utils/fvwm-menu-desktop.in:
	use a non-conflicting module syntax; be more tolerant to read
	permission problems; validate an alias parameter

2000-09-28  Dan Espen  <dane@mk.telcordia.com>
